fixed problem with VisibleContent container

--- a/src/components/VisibleContent/VisibleContent.module.scss
+++ b/src/components/VisibleContent/VisibleContent.module.scss
@@ -12,3 +12,9 @@
 .bold_text {
   margin: 40px 0 20px 0;
 }
+
+@media screen and (max-width: 620px) {
+  .container {
+    flex-basis: auto;
+  }
+}
